feat: update golang-github-junegunn-go-shellwords to 0.0_git20240813.a62c48c
Parse line as shell words (library)

Issue: https://github.com/deepin-community/sig-deepin-sysdev-team/issues/552
Log: update repo

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
-template-repository (1.0-1) unstable; urgency=medium
+golang-github-junegunn-go-shellwords (0.0~git20240813.a62c48c-2) unstable; urgency=medium
 
-  * Initial release
+  * Re-upload as source-only
 
- -- Tsic404 <liuheng@deepin.org>  Sat, 28 Jan 2023 13:46:49 +0800
+ -- Stephen Gelman <ssgelm@debian.org>  Sun, 15 Sep 2024 21:00:33 -0500
+
+golang-github-junegunn-go-shellwords (0.0~git20240813.a62c48c-1) unstable; urgency=medium
+
+  * Initial release (Closes: #1081359)
+
+ -- Stephen Gelman <ssgelm@debian.org>  Tue, 10 Sep 2024 19:28:07 -0500
